--- a/ethereum/6. ethers.js.md
+++ b/ethereum/6. ethers.js.md
@@ -105,6 +105,7 @@ metamask で確認したアカウントのアドレスが `0x8626f6940E2eb28930e
 
 ```js
 > await ethers.provider.getBalance('0x8626f6940E2eb28930eFb4CeF49B2d1F2C9C1199') 
+=>
 10000000000000000000000n
 ```
 
@@ -148,7 +149,7 @@ metamask で確認したアカウントのアドレスが `0x8626f6940E2eb28930e
 index 1 と 2 の Signer
 
 ```js
-const s1= (await ethers.getSigners())[1]
+> const s1= (await ethers.getSigners())[1]
 
 =>
 HardhatEthersSigner {
@@ -202,8 +203,9 @@ Signer s1 がメッセージに署名する
 s1 が s2 にトランザクションを送信する
 
 ```js
-let tx = await s1.sendTransaction({ to: s2.address, value: 100000})
+> let tx = await s1.sendTransaction({ to: s2.address, value: 100000})
 
+> tx
 =>
 TransactionResponse {
   provider: HardhatEthersProvider {
