--- a/ethereum/7. HTLC.md
+++ b/ethereum/7. HTLC.md
@@ -1,6 +1,6 @@
 # 7. ethereum でのHTLC
 
-2024/07/29 
+2024/11/26
 Shigeichiro Yamasaki
 
 ## HTLC
@@ -8,86 +8,29 @@ Shigeichiro Yamasaki
 * 受領者(receiver) は，ハッシュ値の_preimage を提示すれば資金を受け取れる
 * 送金者(sender) は，timelock 時刻以降ならば，資金を回収できる
 
-## hardhatによる実装
-
-### プロジェクトの作成
-
-プロジェクトルート
+## hardhat プロジェクトの作成
 
 ```bash
+cd ~/hardhat
 mkdir htlc
 cd htlc
 ```
 
-プロジェクトの作成
-
 ```bash
-npm init
-```
-
-hardhat と関連プラグインのインストールと初期化
-
-```bash
-npm install --save-dev hardhat
-npm install --save-dev @nomicfoundation/hardhat-ethers ethers
-npm install --save-dev @nomicfoundation/hardhat-chai-matchers
-```
-
-▶ Create a JavaScript project
-を選択
-```bash
+npm init -y
+yarn add --dev hardhat
 npx hardhat init
-```
 
-ディレクトリの確認
-
-```bash
-ls
-
-=>
-README.md		hardhat.config.js	node_modules		package.json
-contracts		ignition		package-lock.json	test
-```
-
-プラグインのインストール
-
-```bash
-npm install --save-dev @nomicfoundation/hardhat-toolbox
-```
-
-hardhat.config.js ファイルの確認
-
-```bash
-nano hardhat.config.js
-```
-
-
-```js
-
-require("@nomicfoundation/hardhat-toolbox");
-require("@nomicfoundation/hardhat-ethers");
-require("@nomicfoundation/hardhat-chai-matchers");
-
-/** @type import('hardhat/config').HardhatUserConfig */
-module.exports = {
-  solidity: "0.8.24",
-};
-$ 
+rm contracts/Lock.sol
+rm test/Lock.js
+rm ignition/modules/Lock.js
 ```
 
 ## Solidity プログラム
 
-サンプルの余計なファイルを削除する
-
-```bash
-rm contracts/Lock.sol 
-rm test/Lock.js 
-rm -fr artifacts/contracts/Lock.sol
-```
-
 HTLCの solidity プログラム
 
-* 受領者(receiver) は，ハッシュ値の_preimage を提示すれば資金を受け取れる
+* 受領者(receiver) は，ハッシュ値の _preimage を提示すれば資金を受け取れる
 * 送金者(sender) は，timelock 時刻以降ならば，資金を回収できる
 * amount は，デポジット資金
 * hashlock は，sha256 ハッシュ値
