--- a/ethereum/1. Hardhat.md
+++ b/ethereum/1. Hardhat.md
@@ -91,17 +91,14 @@ cd tutorial
 ### JavaScript プロジェクトの作成
 
 init コマンドでプロジェクトのフォルダ群を自動生成します．
-
 また，このパスがプロジェクトの起点となる「プロジェクトルート」になります．
-
 設定ファイルは，package.json というファイルです．
 
 ```bash
-npm init -y
+yarn init -y
 ```
 
 ### Hardhat パッケージモジュールのインストール
-
 
 ```bash
 yarn add --dev hardhat
