--- a/ethereum/3. payable.md
+++ b/ethereum/3. payable.md
@@ -14,15 +14,17 @@ Shigeichiro Yamasaki
 cd ~/hardhat
 mkdir payable
 cd payable
+```
 
-npm init -y
+```bash
+yarn init -y
 yarn add --dev hardhat
 npx hardhat init
 
+// 消さなくても実害は無いが消しておく
 rm contracts/Lock.sol
 rm test/Lock.js
 rm ignition/modules/Lock.js
-
 ```
 ### コントラクトのコードの作成
 
