--- a/ethereum/5. ERC721.md
+++ b/ethereum/5. ERC721.md
@@ -128,10 +128,11 @@ cd erc721
 ```
 
 ```bash
-npm init -y
+yarn init -y
 yarn add --dev hardhat
 npx hardhat init
 
+// 消さなくても実害は無いが消しておく
 rm contracts/Lock.sol
 rm test/Lock.js
 rm ignition/modules/Lock.js
