--- a/ethereum/4. ERC20.md
+++ b/ethereum/4. ERC20.md
@@ -84,10 +84,11 @@ cd erc20
 ```
 
 ```bash
-npm init -y
+yarn init -y
 yarn add --dev hardhat
 npx hardhat init
 
+// 消さなくても実害は無いが消しておく
 rm contracts/Lock.sol
 rm test/Lock.js
 rm ignition/modules/Lock.js
