--- a/ethereum/7. HTLC.md
+++ b/ethereum/7. HTLC.md
@@ -17,10 +17,11 @@ cd htlc
 ```
 
 ```bash
-npm init -y
+yarn init -y
 yarn add --dev hardhat
 npx hardhat init
 
+// 消さなくても実害は無いが消しておく
 rm contracts/Lock.sol
 rm test/Lock.js
 rm ignition/modules/Lock.js
