--- a/ethereum/1. Hardhat.md
+++ b/ethereum/1. Hardhat.md
@@ -2,7 +2,7 @@
 
 Ethereum の開発環境
 
-2024/11/19
+2024/11/27
 Shigeichiro Yamasaki
 
 * [環境のセットアップ](#setup)
@@ -164,7 +164,7 @@ tree -L 1
 
 hardhat は Lock という名前のサンプルのスマートコントラクトとテストプログラムを生成してくれます．
 
-しかし，ここでは余計なので削除してしまいます
+特に害はありませんが，ここでは余計なので削除してしまいます
 
 ```bash
 rm contracts/Lock.sol
@@ -441,11 +441,11 @@ describe("トークンのコントラクト", function () {
     // ethers.getSigners() は，トランザクション送信者のEthereumアカウントを返すメソッド
     const [owner] = await ethers.getSigners();
     // ethers.deployContract()  は，引数のコントラクトをデプロイする ethers.js メソッド
-    const hardhatToken = await ethers.deployContract("Token");
+    const Token = await ethers.deployContract("Token");
     // オーナーの所持金
-    const ownerBalance = await hardhatToken.balanceOf(owner.address);
+    const ownerBalance = await Token.balanceOf(owner.address);
     // トークンの総量はオーナーの所持金と等しい
-    expect(await hardhatToken.totalSupply()).to.equal(ownerBalance);
+    expect(await Token.totalSupply()).to.equal(ownerBalance);
   });
 });
 ```
@@ -477,21 +477,21 @@ npx hardhat test
 const [owner] = await ethers.getSigners();
 ```
 * ethers.deployContract()  は，引数のコントラクトをデプロイする ethers.js メソッドです．
-* デプロイが完了すると hardhatToken というコントラクトのオブジェクトが利用可能になります．
+* デプロイが完了すると Token というコントラクトのオブジェクトが利用可能になります．
 
 ```js
-const hardhatToken = await ethers.deployContract("Token");
+const Token = await ethers.deployContract("Token");
 ```
-* コントラクトオブジェクト hardhatTokenに対して balanceOf メソッドを使うと Owner の所持金を確認することができます．
+* コントラクトオブジェクト Tokenに対して balanceOf メソッドを使うと Owner の所持金を確認することができます．
 
 ```js
-const ownerBalance = await hardhatToken.balanceOf(owner.address);
+const ownerBalance = await Token.balanceOf(owner.address);
 ```
-* コントラクトオブジェクト hardhatToken に対して totalSupply というメソッドを使ってトークンの総量を求めます．
+* コントラクトオブジェクト Token に対して totalSupply というメソッドを使ってトークンの総量を求めます．
 * ここではさらに，その値が Ownerの所持金と等しいことをテストします．
 
 ```js
-expect(await hardhatToken.totalSupply()).to.equal(ownerBalance);
+expect(await Token.totalSupply()).to.equal(ownerBalance);
 ```
 
 #### テストの修正
@@ -514,36 +514,36 @@ describe("トークンのコントラクト", function () {
     // 複数のテスト用アカウントの取得
     const [owner, addr1, addr2] = await ethers.getSigners();
     // コントラクトをデプロイする
-    const hardhatToken = await ethers.deployContract("Token");
-    // テストに有用なフィクスチャ
-    return { hardhatToken, owner, addr1, addr2 };
+    const Token = await ethers.deployContract("Token");
+    // テストに利用するフィクスチャ
+    return { Token, owner, addr1, addr2 };
   }
 
   it("トークンの総量が所有者に割り当てられていること", async function () {
     // フィクスチャをデプロイする
-    const { hardhatToken, owner } = await loadFixture(deployTokenFixture);
+    const { Token, owner } = await loadFixture(deployTokenFixture);
     // オーナーの所持金額
-    const ownerBalance = await hardhatToken.balanceOf(owner.address);
+    const ownerBalance = await Token.balanceOf(owner.address);
     // トークンの総額がオーナーの所持金に等しい
-    expect(await hardhatToken.totalSupply()).to.equal(ownerBalance);
+    expect(await Token.totalSupply()).to.equal(ownerBalance);
   });
 
   it("アカウント間でトークンが転送されること", async function () {
     // フィクスチャをデプロイする
-    const { hardhatToken, owner, addr1, addr2 } = await loadFixture(
+    const { Token, owner, addr1, addr2 } = await loadFixture(
       deployTokenFixture
     );
 
     // 50トークンをオーナーから addr1 に送金する
     await expect(
-      hardhatToken.transfer(addr1.address, 50)
-    ).to.changeTokenBalances(hardhatToken, [owner, addr1], [-50, 50]);
+      Token.transfer(addr1.address, 50)
+    ).to.changeTokenBalances(Token, [owner, addr1], [-50, 50]);
 
     // 50トークンを addr1 から addr2に送金する
     // ここではトークンの送金に .connect(signer) を利用している
     await expect(
-      hardhatToken.connect(addr1).transfer(addr2.address, 50)
-    ).to.changeTokenBalances(hardhatToken, [addr1, addr2], [-50, 50]);
+      Token.connect(addr1).transfer(addr2.address, 50)
+    ).to.changeTokenBalances(Token, [addr1, addr2], [-50, 50]);
   });
 });
 
@@ -574,11 +574,8 @@ npx hardhat test
 * プロジェクトルートに移動する
 
 ```bash
-cd ~
-cd hardhat/tutorial
+cd ~/hardhat/tutorial
 ```
-
-
 
 ### hardhat node の起動
 
@@ -653,96 +650,40 @@ Hardhat node の起動画面のアカウントのリストにある
 
 
 
-## hardhat Node にコントラクトをデプロイする
+## コントラクトのデプロイ
 
+### hardhat ignition を利用したコントラクトのデプロイ
 
-### scripts フォルダとデプロイスクリプトの作成
+* hardhat ignition は，デプロイスクリプトを抽象化し，デプロイスクリプトのモジュールとして，宣言的にデプロイを記述します
 
-* プロジェクトルートの下の scripts フォルダにデプロイスクリプトを生成
+#### Future オブジェクト
 
-```bash
-mkdir scripts
-```
+* この宣言的にデプロイを実施するモジュールのことを `Future` オブジェクトと呼びます
+* `Future` オブジェクトは，内部的なデプロイ実施方法の表現であって，ネットワークへの実際の作用は行いません．
 
-* デプロイスクリプトファイルを作成する (deploy.js)
+#### buildModule 関数
 
-```bash
-nano scripts/deploy.js
-```
-
-* deploy.js
-
-```js
-const hre = require("hardhat");
-
-async function main() {
-   const deployedContract = await hre.ethers.deployContract("Token");
-   await deployedContract.waitForDeployment();
-}
-
-main().catch((error) => {
-   console.error(error);
-   process.exitCode = 1;
-});
-
-```
-
-### デプロイスクリプトによる hardhat ネットワークへのデプロイ
-
-```bash
-npx hardhat run scripts/deploy.js --network localhost
-```
-
-* コンソール側のターミナルで Token コントラクトのデプロイの確認
-* コントラクトアカウントのアドレスの確認
-* トランザクションIDの確認
-* デプロイしたアカウントのアドレスの確認
-* デプロイのために消費した Gas の確認
-
-```bash
-eth_blockNumber
-net_version (2)
-eth_getBlockByNumber
-eth_blockNumber
-eth_getBalance (7)
-eth_blockNumber (4)
-eth_chainId (2)
-eth_blockNumber (51)
-eth_accounts
-hardhat_metadata (20)
-eth_blockNumber
-eth_getBlockByNumber
-eth_feeHistory
-eth_maxPriorityFeePerGas
-eth_sendTransaction
-  Contract deployment: Token
-  Contract address:    0x5fbdb2315678afecb367f032d93f642f64180aa3
-  Transaction:         0x0281202f3c48df83b0ddb1e76125f0e11dc7453b143423b849e18bde6e60e389
-  From:                0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
-  Value:               0 ETH
-  Gas used:            712681 of 30000000
-  Block #1:            0x313780e83fdd73b03f9609706176d2c91e6a5f90c373af6277903ed69a9ad19d
-```
-
-## hardhat ignition を利用したコントラクトのデプロイ
-
-デプロイスクリプトの抽象化して，デプロイスクリプトをモジュールとして，宣言的にデプロイを記述する
+* buildModule 関数は `Future` モジュールを生成する関数です．
+* この関数の，第１引数がモジュール名で，第２引数がモジュールを定義するコールバック関数です．
+* `Future` オブジェクトの生成は，`contract` メソッドと `call` メソッドで実施します．
+* `contract` メソッドは，コントラクトのインスタンスをデプロイするための指示を生成します．
+* `call` メソッドはコントラクトの関数を呼び出す指示を生成します．
 
 ### デプロイモジュール
 
 ```bash
 nano ignition/modules/Token.js
 ```
-
-* コメントをよく読んでください
   
 ```js
 const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
 
-// モジュール名
-module.exports = buildModule("Token", (m) => {
-  // コントラクト名
+// モジュール名をTutorial にする．m がモジュールになる
+module.exports = buildModule("Tutorial", (m) => {
+  // コントラクト名Tokenのインスタンスに対するデプロイ指示となる Future オブジェクトの生成
+  // コンストラクタの引数は無い
   const contract = m.contract("Token", []);
+  // コントラクトをデプロイするFuture オブジェクトを返す
   return { contract };
 });
 ```
@@ -753,23 +694,20 @@ module.exports = buildModule("Token", (m) => {
 
 ```bash
 npx hardhat ignition deploy ignition/modules/Token.js --network localhost
+
+=>
+Hardhat Ignition 🚀
+
+Deploying [ Tutorial ]
+
+Batch #1
+  Executed Tutorial#Token
+
+[ Tutorial ] successfully deployed 🚀
+
+Deployed Addresses
+
+Tutorial#Token - 0x5FbDB2315678afecb367f032d93F642f64180aa3
+
 ```
-
-### node のログの確認
-
-* Tokenコントラクトのデプロイが成功すると，コントラクトアドレスが生成される
-* このコントラクトアドレス宛にメッセージトランザクションを送ることで Token コントラクトを操作することができる
-
-```bash
-Mined block #42
-  Block: 0x2636fb5d14784f2a3f5ce41a835315272b408049a351baf3b7ffd892d0cf3039
-    Base fee: 3688905
-    Transaction:           0x3368a9b026beb7009cf48d17e26617876ef3ad34aadb1eb301d4a23b32fc792c
-      Contract deployment: Token
-      Contract address:    0xe7f1725e7734ce288f8367e1bb143e90bb3f0512
-      From:                0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
-      Value:               0 ETH
-      Gas used:            620478 of 620478
-```
-
 
