--- a/ethereum/7. HTLC.md
+++ b/ethereum/7. HTLC.md
@@ -55,27 +55,21 @@ contract HTLC {
     bytes32 public hashlock;
     uint256 public timelock;
     bool public isWithdrawn;
-    bool public isRefunded;
-
-    constructor(
-        address payable _receiver,
-        bytes32 _hashlock,
-        uint256 _timelock
-    ) payable {
+// コンストラクタで受領者と送金者を確定し，ハッシュ値と時間で資金をデポジットする
+    constructor(address payable _receiver,bytes32 _hashlock, uint256 _timelock) payable {
         sender = payable(msg.sender);
         receiver = _receiver;
         amount = msg.value;
         hashlock = _hashlock;
         timelock = _timelock;
-        isWithdrawn = false;
-        isRefunded = false;
+        isWithdrawn = false;  // 引き出し済でない
     }
     // receiver が _preimage を示してデポジット資金を受領する
     function withdraw(bytes32 _preimage) public {
         require(msg.sender == receiver, "Only receiver can withdraw");
         require(!isWithdrawn, "Already withdrawn");
         require(sha256(abi.encodePacked(_preimage)) == hashlock, "Invalid preimage");
-        isWithdrawn = true;
+        isWithdrawn = true; // 引き出し済状態にする
         receiver.transfer(amount);
     }
     // ロック時間経過後，senderが資金を回収する
@@ -83,7 +77,7 @@ contract HTLC {
         require(msg.sender == sender, "Only sender can refund");
         require(!isWithdrawn, "Already withdrawn");
         require(block.timestamp >= timelock, "Timelock has not expired");
-        isRefunded = true;
+        isWithdrawn = true;  // 引き出し済状態にする
         sender.transfer(amount);
     }
 }
@@ -93,43 +87,6 @@ contract HTLC {
 
 ```bash
 npx hardhat compile
-
-=>
-Compiled 1 Solidity files successfully (evm target: paris).
-```
-
-## test プログラム
-
-```bash
-nano test/htlc.js
-```
-
-```js
-// hardhat tool box の利用
-const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers");
-// CHaiの利用
-const { expect } = require("chai");
-
-describe("HTLCのコントラクト", function () {
-  async function deployHtlcFixture() {
-    // テスト用アカウントの取得
-    const [sender, receiver] = await ethers.getSigners();
-    // コントラクトをデプロイする
-    const hardhatHTLC = await ethers.deployContract("HTLC");
-    // テストに有用なフィクスチャ
-    return { hardhatHTLC, sender, receiver };
-  }
-
-  it("HTLCをデプロイする", async function () {
-    const hashlock = ethers.sha256(ethers.toUtf8Bytes("secret")); // プレイメージのハッシュ
-    const timelock = Math.floor(Date.now() / 1000) + 3600; // 1時間後のタイムロック
-    // フィクスチャをデプロイする
-    const { hardhatHTLC, sender, receiver } = await loadFixture(deployHtlcFixture);
-    // senderの所持金額
-    const senderBalance = await hardhatHTLC.balanceOf(sender.address);
-  });
-
-});
 ```
 
 ## hardhat network の起動
@@ -138,26 +95,85 @@ describe("HTLCのコントラクト", function () {
 npx hardhat node
 ```
 
-このターミナルはそのままにしておき，別のターミナルを開いて以降の作業を行う．
+### hardhat ignition によるデプロイモジュールの作成
 
-## コンソールの起動
+* 別のターミナルのプロジェクトルートからの操作
+
+```bash
+cd ~/hardhat/htlc
+```
+
+* deploy スクリプトを作成
+
+
+```bash
+nano ignition/modules/htlc.js
+```
+
+
+```js
+const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
+
+// モジュール名 HTLC
+module.exports = buildModule("HTLC", (m) => {
+  // 受領者アドレス
+  const receiver = "0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC";
+  // プリイメージ "secret" のハッシュ値
+  const hashlock = ethers.sha256(ethers.toUtf8Bytes("secret"));
+  // ロック時間を10分にする
+  const unlockTime = Math.floor(Date.now() / 1000) + 600;
+  // コントラクト名 HTLC
+  const contract = m.contract("HTLC", [receiver, hashlock, unlockTime]);
+  return { contract };
+});
+```
+
+
+### ローカルノードへのデプロイ
+
+```bash
+npx hardhat ignition deploy ignition/modules/htlc.js --network localhost
+
+=>
+Deploying [ MusicNFT ]
+
+Batch #1
+  Executed MusicNFT#MusicNFT
+
+[ MusicNFT ] successfully deployed 🚀
+
+Deployed Addresses
+
+MusicNFT#MusicNFT - 0x5FbDB2315678afecb367f032d93F642f64180aa3
+```
+
+## コンソールからの操作
+
+### コンソールの起動
 
 ```bash
 npx hardhat console --network localhost 
-
-
-=>
-Welcome to Node.js v20.16.0.
-Type ".help" for more information.
-> 
 ```
 
 
-### テストの実行
 
-```bash
-npx hardhat test 
-```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 ## Hardhat Ignition
@@ -189,13 +205,13 @@ const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
 
 module.exports = buildModule("HTLCModule", (m) => {
   // 受領者アドレス
-  const [receiver] = await ethers.getSigners();
+  const [sender, receiver] = await ethers.getSigners();
   // ロック時間を１時間にする
   const unlockTime = Math.floor(Date.now() / 1000) + 3600;
   // プリイメージのハッシュ
   const hashlock = ethers.sha256(ethers.toUtf8Bytes("secret"));
   // HTLCコントラクト
-  const htlc = m.contract("HTLC", [receiver, hashlock, unlockTime], {});
+  const htlc = m.contract("HTLC", [receiver.address, hashlock, unlockTime], {});
   return { htlc };}
  );
 
@@ -229,3 +245,8 @@ HTLCModule#HTLC - 0x5FbDB2315678afecb367f032d93F642f64180aa3
 ```
 
 
+## コンソールの起動
+
+```bash
+npx hardhat console --network localhost 
+```
