--- a/ethereum/1. Hardhat.md
+++ b/ethereum/1. Hardhat.md
@@ -509,32 +509,32 @@ const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers"
 // CHaiの利用
 const { expect } = require("chai");
 
-describe("トークンのコントラクト", function () {
+describe("Tokenコントラクト", function () {
   async function deployTokenFixture() {
     // 複数のテスト用アカウントの取得
     const [owner, addr1, addr2] = await ethers.getSigners();
     // コントラクトをデプロイする
     const Token = await ethers.deployContract("Token");
-    // テストに利用するフィクスチャ
+    // Tokenテスト用フィクスチャ
     return { Token, owner, addr1, addr2 };
   }
 
-  it("トークンの総量が所有者に割り当てられていること", async function () {
-    // フィクスチャをデプロイする
+  it("Tokenの総量が owner に割り当てられていること", async function () {
+    // Tokenテスト用フィクスチャをロードする
     const { Token, owner } = await loadFixture(deployTokenFixture);
-    // オーナーの所持金額
+    // オーナーの所持金額の確認
     const ownerBalance = await Token.balanceOf(owner.address);
-    // トークンの総額がオーナーの所持金に等しい
+    // トークンの総額はオーナーの所持金に等しい
     expect(await Token.totalSupply()).to.equal(ownerBalance);
   });
 
   it("アカウント間でトークンが転送されること", async function () {
-    // フィクスチャをデプロイする
+    // Tokenテスト用フィクスチャをロードする
     const { Token, owner, addr1, addr2 } = await loadFixture(
       deployTokenFixture
     );
 
-    // 50トークンをオーナーから addr1 に送金する
+    // 50トークンを owner から addr1 に送金する
     await expect(
       Token.transfer(addr1.address, 50)
     ).to.changeTokenBalances(Token, [owner, addr1], [-50, 50]);
