--- a/ethereum/3. payable.md
+++ b/ethereum/3. payable.md
@@ -1,6 +1,6 @@
 # 3. Eth を所有可能なコントラクトの作成
 
-2024/11/26
+2024/11/27
 Shigeichiro Yamasaki
 
 ## コントラクトアドレスへのEth 送金を可能にする方法
@@ -72,17 +72,71 @@ contract EthWallet {
 }
 ```
 
-### コントラクトのコンパイル
+## コントラクトのコンパイル
 
 ```bash
 npx hardhat compile
-
 =>
 Compiled 1 Solidity file successfully (evm target: paris).
 ```
 
+## テストの作成
 
-### hardhat ignition によるデプロイモジュールの作成
+```bash
+nano test/EthWallet.js
+```
+
+```js
+// hardhat tool box の利用
+const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers");
+// CHaiの利用
+const { expect } = require("chai");
+
+describe("EthWalletコントラクト", function () {
+  async function deployEthWalletFixture() {
+    // 複数のテスト用アカウントの取得
+    const [owner, addr1, addr2] = await ethers.getSigners();
+    // コントラクトをデプロイする
+    const EthWallet = await ethers.deployContract("EthWallet");
+    // EthWalletテスト用フィクスチャ
+    return { EthWallet, owner, addr1, addr2 };
+  }
+  it("EthWallet の初期の所持金は 0ETH", async function () {
+    // EthWalletテスト用フィクスチャをロードする
+    const {EthWallet, owner, addr1, addr2} = await loadFixture(deployEthWalletFixture);
+    expect(await EthWallet.getBalance()).to.equal(0);
+  });
+  it("ownerからEthWalletへ10000000WEI送金する", async function () {
+    // EthWalletテスト用フィクスチャをロードする
+    const {EthWallet, owner, addr1, addr2} = await loadFixture(deployEthWalletFixture);
+    await owner.sendTransaction({to: EthWallet, value: 10000000n});
+    expect(await EthWallet.getBalance()).to.equal(10000000n);
+  });
+  it("addr1 から EthWalletへ10000000WEI送金する", async function () {
+    // EthWalletテスト用フィクスチャをロードする
+    const {EthWallet, owner, addr1, addr2} = await loadFixture(deployEthWalletFixture);
+    await addr1.sendTransaction({to: EthWallet, value: 10000000n});
+    expect(await EthWallet.getBalance()).to.equal(10000000n);
+  });
+  it("ownerからEthWalletへ10000000WEI送金して ownerが 5000WEI引き出す", async function () {
+    // EthWalletテスト用フィクスチャをロードする
+    const {EthWallet, owner, addr1, addr2} = await loadFixture(deployEthWalletFixture);
+    await owner.sendTransaction({to: EthWallet, value: 10000000n});
+    await EthWallet.withdraw(5000n);
+    expect(await EthWallet.getBalance()).to.equal(9995000n);
+  });
+});
+
+```
+
+### testの実行
+
+```bash
+npx hardhat test 
+
+```
+
+## hardhat ignition によるデプロイモジュールの作成
 
 ```bash
 nano ignition/modules/EthWallet.js
@@ -98,13 +152,13 @@ module.exports = buildModule("EthWallet", (m) => {
 });
 ```
 
-### ローカルノードの起動
+## ローカルノードの起動
 
 ```bash
 npx hardhat node
 ```
 
-### ローカルノードへのデプロイ
+## ローカルノードへのデプロイ
 
 ```bash
 cd ~/hardhat/payable
