--- a/ethereum/3. payable.md
+++ b/ethereum/3. payable.md
@@ -133,7 +133,16 @@ describe("EthWalletコントラクト", function () {
 
 ```bash
 npx hardhat test 
+=>
 
+  EthWalletコントラクト
+    ✔ EthWallet の初期の所持金は0 (295ms)
+    ✔ ownerからEthWalletへ10000000WEI送金する
+    ✔ addr1 から EthWalletへ10000000WEI送金する
+    ✔ ownerからEthWalletへ10000000WEI送金して ownerが 5000WEI引き出す
+
+
+  4 passing (304ms)
 ```
 
 ## hardhat ignition によるデプロイモジュールの作成
