--- a/ethereum/1. Hardhat.md
+++ b/ethereum/1. Hardhat.md
@@ -373,6 +373,94 @@ describe("トークンのコントラクト", function () {
 * キーボード：`<ctrl o>` で保存先ファイル名を確認して `<Enter>` で保存
 * キーボード：`<ctrl x>` で nano エディタ終了
 
+### Chai.js によるテストのアサーションの記述
+
+should , expect, assert の３タイプのテストの流儀が利用可能
+
+#### expect タイプの記述方法
+
+* メソッドチェーン(以下のメソッドは読みやすさのためのもので，処理の連鎖以外の意味は無い）
+to
+be
+does
+have
+and
+...
+
+* equal() : 等しい
+* a(型)/an(型) : 型チェック
+* include() ：含む
+* not ： それ以降の否定
+* true ： trueになる
+* false ： falseになる
+* within(開始, 終了) : 開始から終了の間 
+
+```js
+expect(x).to.equal(2);  		// xは2に等しい
+expect(x).to.be.a('string');  	// x はstring型
+expect(x).to.be.an('array');  	// x はarray型
+expect(x).to.include(3);  		// xは3を含む
+expect(x).to.does.not.include(3);  // xは3を含まない
+expect(x).to.be.true			  // xは true
+expect(x).to.be.false		    // xは false
+```
+
+### Mocha によるテストフレームワークの記述
+
+* テストの定義(describe)(
+  * 事前条件(before)
+     * 個別のアサーションの事前条件(beforeEach)
+     * 個別のアサーション(it) 
+     * 個別のアサーションの事前条件(afterEach)
+  * 結果(after)
+* )
+
+#### Mochaの文法
+
+* describe()	:テストの定義
+* before()	：事前条件
+* after()            : 事後条件
+* it()		：個別のアサーション
+* beforeEach() ：個別のアサーションの事前処理
+* afterEach()    ：個別のアサーションの事後処理
+
+
+#### Mocha の例
+
+```js
+describe("べき乗関数 pow", function() {
+  it("2の0乗は1", function() {
+    assert(math.pow(2, 0)==1);
+  });
+  it("2の3乗は8", function() {
+    assert(math.pow(2, 3)==(8));
+  });
+  it("2の-2乗は0.25", function() {
+    assert(math.pow(2, -2)==0.25);
+  });
+});
+
+```
+
+#### ethers.js (v6系) を使ったコントラクトのデプロイ
+
+* ethers.deployContract 関数
+
+```js
+const contract = await ethers.deployContract(abi, contract,[args])
+```
+
+デプロイするコントラクトのABIやバイトコードと初期値を入れてトランザクション化
+トランザクションをブロードキャストしてコントラクトをデプロイする
+
+  * 引数
+    * ABI
+    * コントラクト
+    * コンストラクタの初期値の配列: []
+  * 返り値
+    *デプロイしたトランザクションのハッシュ値
+
+
 ### テストの実行
 
 * プロジェクトルートから hardhat のテストタスクを実行します
