--- a/ethereum/4. ERC20.md
+++ b/ethereum/4. ERC20.md
@@ -1,6 +1,6 @@
 # 4. ERC20 トークンの作成と利用
 
-2024/11/26
+2024/11/27
 Shigeichiro Yamasaki
 
 OpenZeppelin のライブラリを利用した ERC20トークンを処理するコントラクト
@@ -138,10 +138,59 @@ contract JPYcoin is ERC20 {
 
 ```bash
 npx hardhat compile
-
-=>
-Compiled 6 Solidity files successfully (evm target: paris).
 ```
+
+
+## テストの作成
+
+```bash
+nano test/JPYcoin.js
+```
+
+```js
+// hardhat tool box の利用
+const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers");
+// CHaiの利用
+const { expect } = require("chai");
+
+describe("JPYcoinコントラクト", function () {
+  async function deployJPYcoinFixture() {
+    // テスト用アカウントの取得
+    const [owner, addr1, addr2] = await ethers.getSigners();
+    // コントラクトをデプロイする
+    const JPYcoin = await ethers.deployContract("JPYcoin);
+    // JPYcoinテスト用フィクスチャ
+    return {JPYcoin, owner, addr1, addr2};
+  }
+  it("JPYcoinの総供給量", async function () {
+    // EthWalletテスト用フィクスチャをロードする
+    const {JPYcoin, owner, addr1, addr2} = await loadFixture(deployJPYcoinFixture);
+    expect(await JPYcoin.getBalance()).to.equal(0);
+  });
+
+
+});
+
+```
+
+### testの実行
+
+```bash
+npx hardhat test 
+=>
+
+  EthWalletコントラクト
+    ✔ EthWallet の初期の所持金は0 (295ms)
+    ✔ ownerからEthWalletへ10000000WEI送金する
+    ✔ addr1 から EthWalletへ10000000WEI送金する
+    ✔ ownerからEthWalletへ10000000WEI送金して ownerが 5000WEI引き出す
+
+
+  4 passing (304ms)
+```
+
+
+
 
 ## hardhat node の起動
 
