--- a/ethereum/4. ERC20.md
+++ b/ethereum/4. ERC20.md
@@ -157,17 +157,24 @@ describe("JPYcoinコントラクト", function () {
   async function deployJPYcoinFixture() {
     // テスト用アカウントの取得
     const [owner, addr1, addr2] = await ethers.getSigners();
-    // コントラクトをデプロイする
-    const JPYcoin = await ethers.deployContract("JPYcoin);
+    // コントラクトをデプロイする(初期供給量 10**11)
+    const JPYcoin = await ethers.deployContract("JPYcoin",[10n**11n]);
     // JPYcoinテスト用フィクスチャ
     return {JPYcoin, owner, addr1, addr2};
   }
-  it("JPYcoinの総供給量", async function () {
+  it("JPYcoinの総供給量をownerが所有している", async function () {
     // EthWalletテスト用フィクスチャをロードする
     const {JPYcoin, owner, addr1, addr2} = await loadFixture(deployJPYcoinFixture);
-    expect(await JPYcoin.getBalance()).to.equal(0);
+    const total = await JPYcoin.totalSupply();
+    expect(await JPYcoin.balanceOf(owner.address)).to.equal(total);
   });
-
+  it("JPYcoinの転送", async function () {
+    // EthWalletテスト用フィクスチャをロードする
+    const {JPYcoin, owner, addr1, addr2} = await loadFixture(deployJPYcoinFixture);
+    await JPYcoin.transfer(addr1,8000000n);
+    expect(await JPYcoin.balanceOf(addr1.address)).to.equal(8000000n);
+    expect(await JPYcoin.balanceOf(owner.address)).to.equal(10n**11n-8000000n);
+  });
 
 });
 
@@ -178,19 +185,13 @@ describe("JPYcoinコントラクト", function () {
 ```bash
 npx hardhat test 
 =>
-
-  EthWalletコントラクト
-    ✔ EthWallet の初期の所持金は0 (295ms)
-    ✔ ownerからEthWalletへ10000000WEI送金する
-    ✔ addr1 から EthWalletへ10000000WEI送金する
-    ✔ ownerからEthWalletへ10000000WEI送金して ownerが 5000WEI引き出す
+  JPYcoinコントラクト
+    ✔ JPYcoinの総供給量をownerが所有している (399ms)
+    ✔ JPYcoinの転送
 
 
-  4 passing (304ms)
+  2 passing (402ms)
 ```
-
-
-
 
 ## hardhat node の起動
 
@@ -294,12 +295,6 @@ npx hardhat console --network localhost
 
 > await JPYcoin.balanceOf(addr1)
 8000000n
-```
-
-* addr1 にトークン送金を承認する
-
-```js
-> await JPYcoin.approve(addr1, 1000)
 ```
 
 
