--- a/ethereum/3. payable.md
+++ b/ethereum/3. payable.md
@@ -47,16 +47,13 @@ contract EthWallet {
       // コントラクトをデプロイしたアドレスを所有者として設定
         owner = msg.sender; 
     }
-
-    // コントラクトにETHを送信するための関数
+    // コントラクトがETHを受け取れるようにするための関数
     receive() external payable {
         // 受け取ったETHは自動的にコントラクトの残高に加算されます
     }
-
     // コントラクトへ ETHを預金する deposit はpayable 関数
     function deposit() public payable {
     }
-
     // 所有者のみがコントラクトのETHを引き出せるようにする関数
     function withdraw(uint256 amount) public {
         require(msg.sender == owner, "only owner can withdraw");
@@ -64,7 +61,6 @@ contract EthWallet {
         // コントラクトが所有する ETH から指定した量のETHを所有者に転送
         payable(owner).transfer(amount);
     }
-
     // コントラクトの残高を確認する関数
     function getBalance() public view returns (uint256) {
         return address(this).balance;
