--- a/ethereum/7. HTLC.md
+++ b/ethereum/7. HTLC.md
@@ -3,7 +3,7 @@
 2024/11/26
 Shigeichiro Yamasaki
 
-## HTLC
+## HTLCの機能
 
 * 受領者(receiver) は，ハッシュ値の_preimage を提示すれば資金を受け取れる
 * 送金者(sender) は，timelock 時刻以降ならば，資金を回収できる
@@ -22,6 +22,7 @@ yarn add --dev hardhat
 npx hardhat init
 
 // 消さなくても実害は無いが消しておく
+
 rm contracts/Lock.sol
 rm test/Lock.js
 rm ignition/modules/Lock.js
@@ -47,37 +48,38 @@ nano contracts/htlc.sol
 ```js
 // SPDX-License-Identifier: MIT
 pragma solidity ^0.8.0;
-
 contract HTLC {
     address payable public sender;
     address payable public receiver;
-    uint256 public amount;
     bytes32 public hashlock;
     uint256 public timelock;
-    bool public isWithdrawn;
+    uint256 public amount;
+    event Log(address indexed _from, uint256 _value, string _msg);
 // コンストラクタで受領者と送金者を確定し，ハッシュ値と時間で資金をデポジットする
     constructor(address payable _receiver,bytes32 _hashlock, uint256 _timelock) payable {
         sender = payable(msg.sender);
         receiver = _receiver;
-        amount = msg.value;
         hashlock = _hashlock;
         timelock = _timelock;
-        isWithdrawn = false;  // 引き出し済でない
     }
-    // receiver が _preimage を示してデポジット資金を受領する
-    function withdraw(bytes32 _preimage) public {
+    // コントラクトがETHを受け取れるようにするための関数
+    receive() external payable {
+      emit Log(msg.sender, msg.value, "eth received");
+    }
+    // ハッシュ値の原像でアンロックし，デポジット資金を受領者に送金する
+    function withdraw(bytes memory _preimage) public {
         require(msg.sender == receiver, "Only receiver can withdraw");
-        require(!isWithdrawn, "Already withdrawn");
-        require(sha256(abi.encodePacked(_preimage)) == hashlock, "Invalid preimage");
-        isWithdrawn = true; // 引き出し済状態にする
+        amount = address(this).balance;
+        require(amount > 0 , "Already withdrawn");
+        require(sha256(_preimage) == hashlock, "Invalid preimage");
         receiver.transfer(amount);
     }
     // ロック時間経過後，senderが資金を回収する
-    function refund() public {
+    function refund() public  {
         require(msg.sender == sender, "Only sender can refund");
-        require(!isWithdrawn, "Already withdrawn");
+        amount = address(this).balance;
+        require(amount > 0 , "Already withdrawn");
         require(block.timestamp >= timelock, "Timelock has not expired");
-        isWithdrawn = true;  // 引き出し済状態にする
         sender.transfer(amount);
     }
 }
@@ -89,13 +91,106 @@ contract HTLC {
 npx hardhat compile
 ```
 
+
+
+## テストの作成
+
+```bash
+nano test/HTLC.js
+```
+
+```js
+// hardhat tool box の利用
+const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers");
+// CHaiの利用
+const { expect } = require("chai");
+
+describe("HTLCコントラクト", function () {
+  // HTLCのデプロイ(sender から receiver に送金する)
+  async function deployHTLCFixture() {
+    // テスト用アカウントの取得
+    const [sender, addr1, receiver] = await ethers.getSigners();
+    // ロック用の sha256 ハッシュ値の原像を "secret" とする
+    const preimage = ethers.toUtf8Bytes("secret");
+    const hashlock = ethers.sha256(preimage);
+    // ロックタイムを現在のブロックタイムスタンプから 30分後にする
+    const LockTime = (await ethers.provider.getBlock('latest')).timestamp+(60*30);
+    // HTLCのデプロイ，送金先は addr2 ,タイムロック時間は 30分
+    const HTLC = await ethers.deployContract("HTLC",[receiver, hashlock, LockTime]);
+    // sender からHTLCに 10000000 WEI 送金する
+    await sender.sendTransaction({to: HTLC, value: 10n**18n});
+    // HTLCテスト用フィクスチャ
+    return {HTLC, sender, addr1, receiver};
+  }
+  it("receiver による HTLCのハッシュ値の原像の提示による資金のアンロック", async function () {
+    // HTLCテスト用フィクスチャをロードする
+    const {HTLC, sender, addr1, receiver} = await loadFixture(deployHTLCFixture);
+    // HTLC の残高の確認
+    const h_amount1 = await ethers.provider.getBalance(HTLC);
+    console.log(`HTLCロック中残高 ${h_amount1}`);
+    expect(h_amount1).to.equal(10n**18n);
+    // ハッシュ値の原像 "secret" を使ってアンロックする
+    const preimage = ethers.toUtf8Bytes("secret");
+    await HTLC.connect(receiver).withdraw(preimage);
+    // HTLC の残高の確認
+    const h_amount2 = await ethers.provider.getBalance(HTLC);
+    console.log(`HTLCアンロック後残高 ${h_amount2}`);
+    expect(h_amount2).to.equal(0n);
+  });
+
+    it("時間経過後の sender による資金の回収", async function () {
+    // HTLCテスト用フィクスチャをロードする
+    const {HTLC, sender, addr1, receiver} = await loadFixture(deployHTLCFixture);
+    // HTLC の残高の確認
+    const h_amount1 = await ethers.provider.getBalance(HTLC);
+    console.log(`HTLCロック中残高 ${h_amount1}`);
+    expect(h_amount1).to.equal(10n**18n);
+    //EVM の時間を 30分 進める
+    await ethers.provider.send('evm_increaseTime', [60*30]);
+    await ethers.provider.send('evm_mine');
+    // senderが資金を回収する
+    await HTLC.connect(sender).refund();
+    // HTLC の残高の確認
+    const h_amount2 = await ethers.provider.getBalance(HTLC);
+    console.log(`HTLCアンロック後残高 ${h_amount2}`);
+    expect(h_amount2).to.equal(0n);
+  });
+
+});
+
+```
+
+### testの実行
+
+```bash
+npx hardhat test 
+=>
+
+  HTLCコントラクト
+HTLCロック中残高 1000000000000000000
+HTLCアンロック後残高 0
+    ✔ receiver による HTLCのハッシュ値の原像の提示による資金のアンロック (389ms)
+HTLCロック中残高 1000000000000000000
+HTLCアンロック後残高 0
+    ✔ 時間経過後の sender による資金の回収
+
+
+  2 passing (392ms)
+
+
+```
+
+
+
+
+
 ## hardhat network の起動
 
 ```bash
 npx hardhat node
 ```
 
-### hardhat ignition によるデプロイモジュールの作成
+## hardhat ignition によるデプロイモジュールの作成
 
 * 別のターミナルのプロジェクトルートからの操作
 
@@ -126,127 +221,4 @@ module.exports = buildModule("HTLC", (m) => {
   const contract = m.contract("HTLC", [receiver, hashlock, unlockTime]);
   return { contract };
 });
-```
-
-
-### ローカルノードへのデプロイ
-
-```bash
-npx hardhat ignition deploy ignition/modules/htlc.js --network localhost
-
-=>
-Deploying [ MusicNFT ]
-
-Batch #1
-  Executed MusicNFT#MusicNFT
-
-[ MusicNFT ] successfully deployed 🚀
-
-Deployed Addresses
-
-MusicNFT#MusicNFT - 0x5FbDB2315678afecb367f032d93F642f64180aa3
-```
-
-## コンソールからの操作
-
-### コンソールの起動
-
-```bash
-npx hardhat console --network localhost 
-```
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-## Hardhat Ignition
-
-#### hardhat Ignition モジュール プラグインのインストール
-
-プロジェクトルートで実行
-
-```bash
-npm install --save-dev @nomicfoundation/hardhat-ignition-ethers
-```
-
-### hardhat Ignition モジュールの作成
-
-`./ignition/modules` ディレクトリの `Lock.js` を `HTLC.js` に変更します
-
-```bash
-mv ignition/module/Lock.js ignition/module/HTLC.js
-```
-
-ファイルを編集します
-
-```bash
-nano ignition/modules/HTLC.js
-```
-
-```js
-const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
-
-module.exports = buildModule("HTLCModule", (m) => {
-  // 受領者アドレス
-  const [sender, receiver] = await ethers.getSigners();
-  // ロック時間を１時間にする
-  const unlockTime = Math.floor(Date.now() / 1000) + 3600;
-  // プリイメージのハッシュ
-  const hashlock = ethers.sha256(ethers.toUtf8Bytes("secret"));
-  // HTLCコントラクト
-  const htlc = m.contract("HTLC", [receiver.address, hashlock, unlockTime], {});
-  return { htlc };}
- );
-
-
-
-```
-
-##  Hardhat Network へのデプロイ
-
-ignition コマンドでデプロイすることができます．
-
-デプロイした結果，デプロイしたスマートコントラクトのコントラクトアカウントのアドレスが返ってきます
-
-```bash
-npx hardhat ignition deploy ./ignition/modules/HTLC.js --network localhost
-
-=>
-Hardhat Ignition 🚀
-
-Deploying [ HTLCModule ]
-
-Batch #1
-  Executed HTLCModule#HTLC
-
-[ HTLCModule ] successfully deployed 🚀
-
-Deployed Addresses
-
-HTLCModule#HTLC - 0x5FbDB2315678afecb367f032d93F642f64180aa3
-
-```
-
-
-## コンソールの起動
-
-```bash
-npx hardhat console --network localhost 
 ```
