--- a/ethereum/5. ERC721.md
+++ b/ethereum/5. ERC721.md
@@ -187,7 +187,7 @@ npx hardhat compile
 npx hardhat node
 ```
 
-### hardhat ignition によるデプロイモジュールの作成
+## hardhat ignition によるデプロイモジュールの作成
 
 * 別のターミナルのプロジェクトルートからの操作
 
