--- a/ethereum/6. ethers.js.md
+++ b/ethereum/6. ethers.js.md
@@ -169,7 +169,7 @@ HardhatEthersSigner {
   }
 }
 
-const s2= (await ethers.getSigners())[2]
+> const s2= (await ethers.getSigners())[2]
 
 =>
 HardhatEthersSigner {
