--- a/ethereum/7. HTLC.md
+++ b/ethereum/7. HTLC.md
@@ -1,6 +1,6 @@
 # 7. ethereum でのHTLC
 
-2024/11/26
+2024/11/30
 Shigeichiro Yamasaki
 
 ## HTLCの機能
@@ -99,6 +99,15 @@ npx hardhat compile
 nano test/HTLC.js
 ```
 
+### EVM の時間を指定しただけ進める方法
+
+
+```js
+//EVM の時間を 30分 = 60秒×30 進める場合
+await ethers.provider.send('evm_increaseTime', [60*30]);
+await ethers.provider.send('evm_mine');
+```
+
 ```js
 // hardhat tool box の利用
 const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers");
@@ -176,10 +185,106 @@ HTLCアンロック後残高 0
 
 
   2 passing (392ms)
+```
 
+## hardhat node の起動
+
+```bash
+npx hardhat node
+```
+
+## hardhat デプロイスクリプトを使ってデプロイする
+
+* 別のターミナルのプロジェクトルートからの操作
+
+```bash
+cd ~/hardhat/htlc
+```
+
+* script ディレクトリの作成
+
+```bash
+mkdir scripts
+```
+
+```bash
+nano scripts/HTLC.js
+```
+
+```js
+const hre = require("hardhat");
+// デプロイする非同期関数の定義
+    async function main() {
+      // テスト用アカウントの取得
+      const [sender, addr1, receiver] = await ethers.getSigners();
+      // ロック用の sha256 ハッシュ値の原像を "secret" とする
+      const preimage = ethers.toUtf8Bytes("secret");
+      const hashlock = ethers.sha256(preimage);
+      // ロックタイムを現在のブロックタイムスタンプから 30分後にする
+      const LockTime = (await ethers.provider.getBlock('latest')).timestamp+(60*30);
+      const HTLC = await hre.ethers.deployContract("HTLC",[receiver,hashlock,LockTime]);
+      await HTLC.waitForDeployment();
+      await sender.sendTransaction({to: HTLC, value: 10n**18n});
+      console.log("コントラクトアドレス：", HTLC.target);
+      
+    }
+
+// 上で定義した main関数を実行する
+main()
+  // 正常終了の場合
+  .then(() => process.exit(0))
+  // 以上終了の場合
+  .catch((error) => {
+    console.error(error);
+    process.exit(1);
+  });
 
 ```
 
+### ローカルノードへのデプロイ
 
+```bash
+npx hardhat run scripts/HTLC.js --network localhost
+=>
+コントラクトアドレス： 0x5FbDB2315678afecb367f032d93F642f64180aa3
+```
 
+## コンソールからの操作
 
+### コンソールの起動
+
+```bash
+npx hardhat console --network localhost 
+```
+
+### HTLC コントラクトへの操作
+
+```js
+> const HTLC_addr = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
+> const HTLC_Factory = await ethers.getContractFactory("HTLC")
+> const HTLC = await HTLC_Factory.attach(HTLC_addr)
+
+// テスト用アカウント
+> const [sender, addr1, receiver] = await ethers.getSigners();
+// HTLCの残高
+> await ethers.provider.getBalance(HTLC);
+=>
+1000000000000000000n
+
+> await ethers.provider.getBalance(receiver);
+=>
+10000000000000000000000n
+
+// ハッシュ値の原像 "secret" を使ってアンロックする
+> const preimage = ethers.toUtf8Bytes("secret");
+
+> preimage
+=>
+Uint8Array(6) [ 115, 101, 99, 114, 101, 116 ]
+
+> await HTLC.connect(receiver).withdraw(preimage);
+
+> await ethers.provider.getBalance(receiver);
+=>
+10000999951224885340872n
+```
