--- a/ethereum/5. ERC721.md
+++ b/ethereum/5. ERC721.md
@@ -1,6 +1,6 @@
 # 4. ERC721 トークンの作成と利用
 
-2024/11/26
+2024/12/02
 Shigeichiro Yamasaki
 
 OpenZeppelin のライブラリを利用した ERC721 NFTを処理するコントラクト
@@ -101,7 +101,6 @@ to がコントラクトアドレスのときはNFT移転機能を検査する
 所有者／委任者でなければ書き換えは行えない
 
 
-
 ## ERC-721 NFTに対する操作権限の委任 (approve/setApprovalForAll)
 
 NFT をマーケットプレースなどに預託することができる．スマートコントラクトによるNFTの販売などに利用される
@@ -161,16 +160,15 @@ pragma solidity ^0.8.20;
 import {ERC721URIStorage, ERC721} from "@openzeppelin/contracts/token/ERC721/extensions/ERC721URIStorage.sol";
 
 contract MusicNFT is ERC721URIStorage {
-    uint256 private _nextMusicId;
+    uint256 private _nextMusicNFTId;
 
     constructor() ERC721("MusicNFT", "MFT") {}
 
-    function awardMusic(address musician, string memory musicURI) public returns (uint256) {
-        uint256 musicId = _nextMusicId++;
-        _mint(musician, musicId);
-        _setTokenURI(musicId, musicURI);
-
-        return musicId;
+    function mineMusicNFT(address musician, string memory musicURI) public returns (uint256) {
+        uint256 musicNFTId = _nextMusicNFTId++;
+        _mint(musician, musicNFTId);
+        _setTokenURI(musicNFTId, musicURI);
+        return musicNFTId;
     }
 }
 ```
@@ -181,11 +179,56 @@ contract MusicNFT is ERC721URIStorage {
 npx hardhat compile
 ```
 
+## テストの作成
+
+```bash
+nano test/MusicNFT.js
+```
+
+```js
+// hardhat tool box の利用
+const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers");
+// CHaiの利用
+const { expect } = require("chai");
+
+describe("MusicNFTコントラクト", function () {
+  async function deployMusicNFTFixture() {
+    // テスト用アカウントの取得
+    const [owner, addr1, addr2] = await ethers.getSigners();
+    // コントラクトをデプロイする
+    const MusicNFT = await ethers.deployContract("MusicNFT",[]);
+    // MusicNFTテスト用フィクスチャ
+    return {MusicNFT, owner, addr1, addr2};
+  }
+  it("MusicNFTの採掘", async function () {
+    // MusicNFTテスト用フィクスチャをロードする
+    const {MusicNFT, owner, addr1, addr2} = await loadFixture(deployMusicNFTFixture);
+    let uri1 = "https://music.example/music.json";
+    await MusicNFT.mineMusicNFT(owner.address, uri1);
+    expect(await MusicNFT.balanceOf(owner)).to.equal(1);
+  });
+});
+
+```
+
+### testの実行
+
+```bash
+npx hardhat test 
+
+  MusicNFTコントラクト
+    ✔ MusicNFTの採掘 (414ms)
+
+
+  1 passing (415ms)
+```
+
 ## hardhat node の起動
 
 ```bash
 npx hardhat node
 ```
+
 
 ## hardhat ignition によるデプロイモジュールの作成
 
