NFTの所有移転のテスト追加

--- a/ethereum/05. ERC721.md
+++ b/ethereum/05. ERC721.md
@@ -247,7 +247,20 @@ describe("MusicNFTコントラクト", function () {
     const {MusicNFT, owner, addr1, addr2} = await loadFixture(deployMusicNFTFixture);
     let uri1 = "https://music.example/music1.json";
     await MusicNFT.safeMint(addr1.address, uri1);
-    expect(await MusicNFT.balanceOf(owner)).to.equal(0);
+    // 最初のNFTのTokenID は 0 
+    console.log(await MusicNFT.ownerOf(0));
+    // TokenURIの確認
+    console.log(await MusicNFT.tokenURI(0));
+    expect(await MusicNFT.balanceOf(addr1)).to.equal(1);
+  });
+  it("NFTの所有の移転", async function () {
+    // MusicNFTテスト用フィクスチャをロードする
+    const {MusicNFT, owner, addr1, addr2} = await loadFixture(deployMusicNFTFixture);
+    let uri1 = "https://music.example/music1.json";
+    await MusicNFT.safeMint(addr1.address, uri1);
+    // addr1 からの指示で，addr1 から addr2 にNFTの所有を移転する
+    await MusicNFT.connect(addr1).safeTransferFrom(addr1.address, addr2.address, 0);
+    expect(await MusicNFT.ownerOf(0)).to.equal(addr2.address);
   });
 });
 
@@ -258,12 +271,14 @@ describe("MusicNFTコントラクト", function () {
 ```bash
 npx hardhat test 
 
-
   MusicNFTコントラクト
-    ✔ 音楽家 addr1 の音源 MusicNFTの生成 (425ms)
+0x70997970C51812dc3A010C7d01b50e0d17dc79C8
+https://music.example/https://music.example/music1.json
+    ✔ 音楽家 addr1 の音源 music1 の MusicNFTの生成 (397ms)
+    ✔ NFTの所有の移転
 
 
-  1 passing (426ms)
+  2 passing (406ms)
 ```
 
 ## hardhat node の起動
